Fix white-listed touch action computation

In our current implementation, we first try to find the closest layer
that a touch point hit, and then extract the white listed touch action
from that layer.  This is done in the function
EventListenerTypeForTouchStartOrMoveAt. When we extract the white listed
touch action from the closest layer, we are doing it wrong because we
use the device viewport point which doesn't account for the screen
space transform, device scale factor, etc.

This CL fixes the problem. In FindLayerThatIsHitByPointInTouchHandlerRegion,
we are going through each layer to check whether this layer is hit by
the touch point or not. All we need to is pass a out_touch_action, and
once we find the closest layer that is hit by the touch point, we do
out_touch_action = this layer's touch action.

Bug: 783168
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I626031b1f7a3009620379c8b51ab2ec6a98f16b3