cc/trees/layer_tree_host_impl_unittest.cc
@@ -603,6 +603,60 @@ class LayerTreeHostImplTest : public testing::Test,
     host_impl_ = nullptr;
   }
 
+  void WhiteListedTouchActionTestHelper(float device_scale_factor,
+                                        float page_scale_factor) {
+    LayerImpl* scroll = SetupScrollAndContentsLayers(gfx::Size(200, 200));
+    host_impl_->SetViewportSize(gfx::Size(100, 100));
+    DrawFrame();
+    LayerImpl* root = host_impl_->active_tree()->root_layer_for_testing();
+
+    // Just hard code some random number, we care about the actual page scale
+    // factor on the active tree.
+    float min_page_scale_factor = 0.1f;
+    float max_page_scale_factor = 5.0f;
+    host_impl_->active_tree()->PushPageScaleFromMainThread(
+        page_scale_factor, min_page_scale_factor, max_page_scale_factor);
+    host_impl_->active_tree()->SetDeviceScaleFactor(device_scale_factor);
+
+    std::unique_ptr<LayerImpl> child_layer =
+        LayerImpl::Create(host_impl_->active_tree(), 6);
+    LayerImpl* child = child_layer.get();
+    child_layer->SetDrawsContent(true);
+    child_layer->SetPosition(gfx::PointF(0, 0));
+    child_layer->SetBounds(gfx::Size(25, 25));
+    scroll->test_properties()->AddChild(std::move(child_layer));
+    host_impl_->active_tree()->BuildPropertyTreesForTesting();
+
+    TouchActionRegion root_touch_action_region;
+    root_touch_action_region.Union(kTouchActionPanX, gfx::Rect(0, 0, 50, 50));
+    root->SetTouchActionRegion(root_touch_action_region);
+    TouchActionRegion child_touch_action_region;
+    child_touch_action_region.Union(kTouchActionPanLeft,
+                                    gfx::Rect(0, 0, 25, 25));
+    child->SetTouchActionRegion(child_touch_action_region);
+
+    TouchAction touch_action = kTouchActionAuto;
+    host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(10, 10),
+                                                       &touch_action);
+    EXPECT_EQ(kTouchActionPanLeft, touch_action);
+    touch_action = kTouchActionAuto;
+    host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(30, 30),
+                                                       &touch_action);
+    EXPECT_EQ(kTouchActionPanX, touch_action);
+
+    TouchActionRegion new_child_region;
+    new_child_region.Union(kTouchActionPanY, gfx::Rect(0, 0, 25, 25));
+    child->SetTouchActionRegion(new_child_region);
+    touch_action = kTouchActionAuto;
+    host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(10, 10),
+                                                       &touch_action);
+    EXPECT_EQ(kTouchActionPanY, touch_action);
+    touch_action = kTouchActionAuto;
+    host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(30, 30),
+                                                       &touch_action);
+    EXPECT_EQ(kTouchActionPanX, touch_action);
+  }
+
   void pinch_zoom_pan_viewport_forces_commit_redraw(float device_scale_factor);
   void pinch_zoom_pan_viewport_test(float device_scale_factor);
   void pinch_zoom_pan_viewport_and_scroll_test(float device_scale_factor);
@@ -13132,6 +13186,22 @@ TEST_F(LayerTreeHostImplTest, NeedUpdateGpuRasterization) {
   EXPECT_TRUE(host_impl_->NeedUpdateGpuRasterizationStatusForTesting());
   host_impl_->CommitComplete();
   EXPECT_FALSE(host_impl_->NeedUpdateGpuRasterizationStatusForTesting());
+}
+
+TEST_F(LayerTreeHostImplTest, WhiteListedTouchActionTest1) {
+  WhiteListedTouchActionTestHelper(1.0f, 1.0f);
+}
+
+TEST_F(LayerTreeHostImplTest, WhiteListedTouchActionTest2) {
+  WhiteListedTouchActionTestHelper(1.0f, 0.789f);
+}
+
+TEST_F(LayerTreeHostImplTest, WhiteListedTouchActionTest3) {
+  WhiteListedTouchActionTestHelper(2.345f, 1.0f);
+}
+
+TEST_F(LayerTreeHostImplTest, WhiteListedTouchActionTest4) {
+  WhiteListedTouchActionTestHelper(2.654f, 0.678f);
 }
 
 }  // namespace
